--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "url": "git+https://github.com/edobry/bathymetry.git"
     },
     "dependencies": {
+        "node-static": "^0.7.9",
         "three": "^0.84.0"
     }
 }
