--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "url": "git+https://github.com/edobry/bathymetry.git"
     },
     "dependencies": {
+        "c3": "^0.4.14",
+        "chroma-js": "^1.3.4",
         "node-static": "^0.7.9",
         "three": "^0.84.0"
     }
